--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -28,15 +28,15 @@ jobs:
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
       run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
       env:
-        CC: clang-11
-        CXX: clang++-11
+        CC: clang
+        CXX: clang++
 
     - name: Build
       # Build your program with the given configuration
       run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
       env:
-        CC: clang-11
-        CXX: clang++-11
+        CC: clang
+        CXX: clang++
 
     - name: Test
       working-directory: ${{github.workspace}}/build
@@ -44,6 +44,6 @@ jobs:
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ctest -C ${{env.BUILD_TYPE}}
       env:
-        CC: clang-11
-        CXX: clang++-11
+        CC: clang
+        CXX: clang++
 
